[gd_scene load_steps=4 format=3 uid="uid://v7vnhixbm8if"]

[ext_resource type="Script" path="res://Player/CharacterBody2D.gd" id="1_y6tb1"]
[ext_resource type="Texture2D" uid="uid://b6cajxerevw5t" path="res://icon.svg" id="2_2rob6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i72xf"]
size = Vector2(131, 128)

[node name="Player" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_y6tb1")

[node name="Icon" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(304, 335)
texture = ExtResource("2_2rob6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(304.5, 336)
shape = SubResource("RectangleShape2D_i72xf")

[node name="SprintTimer" type="Timer" parent="CharacterBody2D"]
process_mode = 1
wait_time = 10.0
one_shot = true
autostart = true

[node name="SprintStopTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 5.0

[connection signal="timeout" from="CharacterBody2D/SprintTimer" to="CharacterBody2D" method="_on_sprint_timer_timeout"]
[connection signal="timeout" from="CharacterBody2D/SprintStopTimer" to="CharacterBody2D" method="_on_sprint_stop_timer_timeout"]
